tests/baselines/reference/typecheckCommaExpression.errors.txt
==== tests/cases/compiler/typecheckCommaExpression.ts (2 errors) ====
    (a, b)
     ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.